# tembo

./: README.md
console_app/: CMakeLists.txt  data_manager .cpp  data_manager.h  example.json  example_1.json  main.cpp  types.h
